# auto

./: CMakeLists.txt  Makefile  README.md
cc/: defer.cc  defer.h  init.cc  init.h  loop.cc  loop.h  main.cc  releaser.cc  releaser.h  sdl_exception.cc  sdl_exception.h  sdl_wgpu.cc  sdl_wgpu.h  state.cc  state.h  thrower.cc  thrower.h  wgpu_exception.cc  wgpu_exception.h
wgsl/: compute.wgsl  draw.wgsl  render.wgsl
